--- a/src/index.scss
+++ b/src/index.scss
@@ -5,4 +5,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #982394;
+  color: #982394;
 }
