--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -20,6 +20,7 @@
     &__author {
         align-content: flex-end;
         text-align: right;
+        font-weight: 500;
     }
 
     &__info {
@@ -44,6 +45,12 @@
         height: 40px;
         justify-content: center;
         text-decoration: none;
+        transition: all 0.5s ease-in-out;
+
+        &:hover,
+        &:focus {
+            opacity: 0.9;
+        }
     }
 
     &__random-quote {
@@ -56,5 +63,11 @@
         margin: 0;
         padding: 5px 15px;
         cursor: pointer;
+        transition: all 0.5s ease-in-out;
+
+        &:hover,
+        &:focus {
+            opacity: 0.9;
+        }
     }
 }
