--- a/src/index.scss
+++ b/src/index.scss
@@ -7,4 +7,5 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #982394;
   color: #982394;
+  transition: all 0.5s ease-in-out;
 }
