[BUGFIX] - JS/CSS - fix hover buttons and color script

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -49,7 +49,7 @@
 
         &:hover,
         &:focus {
-            opacity: 0.9;
+            opacity: 0.9 !important;
         }
     }
 
@@ -67,7 +67,7 @@
 
         &:hover,
         &:focus {
-            opacity: 0.9;
+            opacity: 0.9 !important;
         }
     }
 }
